--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,85 @@
-aif360==0.2.2
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037492802/work
-async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-autoattack @ git+https://github.com/fra31/auto-attack@6a0bbdc84433ad3270896baed1ea06e55d68a3de
+argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037097816/work
+async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+autoattack @ git+https://github.com/fra31/auto-attack@ad5c1ea36055caedbafb3326e4d6374658e8c33a
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-certifi==2021.5.30
-cffi @ file:///tmp/build/80754af9/cffi_1613246439577/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cycler==0.10.0
-decorator @ file:///home/ktietz/src/ci/decorator_1611930055503/work
-defusedxml @ file:///home/ktietz/src/ci_mi/defusedxml_1612808095953/work
+bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
+Bottleneck==1.3.2
+certifi==2021.10.8
+cffi @ file:///tmp/build/80754af9/cffi_1625807838443/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+debugpy @ file:///tmp/build/80754af9/debugpy_1637091796427/work
+decorator @ file:///tmp/build/80754af9/decorator_1632776554403/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
 entrypoints==0.3
-graphviz==0.16
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206602906/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython==7.12.0
+fonttools==4.25.0
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1638542885373/work
+ipykernel @ file:///tmp/build/80754af9/ipykernel_1633545412716/work/dist/ipykernel-6.4.1-py3-none-any.whl
+ipython @ file:///tmp/build/80754af9/ipython_1635943998418/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-jedi @ file:///tmp/build/80754af9/jedi_1611333750012/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
+jedi @ file:///tmp/build/80754af9/jedi_1611333125342/work
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
+joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
-jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1612213308682/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1637148478538/work
+jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1616615302928/work
+jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1636524756443/work
 jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
 jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1612282412546/work
-MarkupSafe==1.1.1
-matplotlib==3.1.3
+kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1612282420641/work
+MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621528148836/work
+matplotlib @ file:///tmp/build/80754af9/matplotlib-suite_1638289681807/work
+matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
 mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+mkl-fft==1.3.1
+mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
+mkl-service==2.4.0
+munkres==1.1.4
 nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914804165/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1610738111109/work
+nbconvert @ file:///tmp/build/80754af9/nbconvert_1624479060632/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
 nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///tmp/build/80754af9/notebook_1611341009357/work
-numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1603487797006/work
-olefile==0.46
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas @ file:///tmp/build/80754af9/pandas_1602088135163/work
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120937332/work
-parso @ file:///tmp/build/80754af9/parso_1607623074025/work
+notebook @ file:///tmp/build/80754af9/notebook_1637161770985/work
+numexpr @ file:///tmp/build/80754af9/numexpr_1618856167419/work
+numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1634095647912/work
+olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
+packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+pandas==1.3.4
+pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120460739/work
+parso @ file:///tmp/build/80754af9/parso_1617223946239/work
 pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
 pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///tmp/build/80754af9/pillow_1614711422658/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1606344362066/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+Pillow==8.4.0
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1637050397234/work
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
 ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pydotplus==2.0.2
-Pygments @ file:///tmp/build/80754af9/pygments_1613849567472/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141725711/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pyzmq==20.0.0
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1612458529756/work
-QtPy==1.9.0
-scikit-learn @ file:///home/conda/feedstock_root/build_artifacts/scikit-learn_1605985617292/work
-scipy==1.4.1
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-six @ file:///tmp/build/80754af9/six_1605205335545/work
-terminado==0.9.2
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-threadpoolctl @ file:///tmp/tmp79xdzxkt/threadpoolctl-2.1.0-py3-none-any.whl
-torch==1.3.1
-torchvision==0.4.2
-tornado @ file:///tmp/build/80754af9/tornado_1606942266872/work
-tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
-traitlets==4.3.3
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
+pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
+pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1636110947380/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz==2021.3
+pyzmq @ file:///tmp/build/80754af9/pyzmq_1638436375034/work
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1632739723211/work
+QtPy @ file:///tmp/build/80754af9/qtpy_1629397026935/work
+scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598376899566/work
+scipy @ file:///tmp/build/80754af9/scipy_1630606796110/work
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+sip==4.19.13
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+terminado==0.9.4
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
+torch==1.10.0
+torchaudio==0.10.0
+torchvision==0.11.1
+tornado @ file:///tmp/build/80754af9/tornado_1606942300299/work
+tqdm @ file:///tmp/build/80754af9/tqdm_1635330843403/work
+traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
+zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
